Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-2228

Epoll proactor listener leaks file descriptors on close

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.31.0
    • proton-c-0.32.0
    • proton-c
    • None

    Description

      The epoll proactor implementation doesn't correctly close the actual file descriptors used for the listening sockets when the listener is closed e.g. by pn_listener_close().

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: