PROTON-2228: pn_listener_close doesn't correctly close the listener fds